--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,9 +1,80 @@
+<!DOCTYPE html>
 <html>
+
     <head>
+
+        <meta charset="utf-8">
+
+        <title>Main</title>
+
+        <link rel="shortcut icon" href="/home/nivek/Área de trabalho/University-Platform/src/view/img/titleIcon.ico">
+
+        <link rel="stylesheet" href="/home/nivek/Área de trabalho/University-Platform/src/view/css/index.css">
 
     </head>
 
+
     <body>
         
+        <div id="menu">
+            <nav id="navbar">
+
+                <div id="imageMenu">
+                    <img src="/home/nivek/Área de trabalho/University-Platform/src/view/img/logo1.svg" alt= "error" width=300 height=90/> 
+                </div>
+                
+                <div id="list">
+                    <ul>
+    
+                        <li>
+                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/index.html">Início</a>
+                        </li>
+        
+                        <li>
+                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/login.html">Entrar</a>
+                        </li>
+        
+                        <li>
+                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/cadastro.html">Cadastrar</a>
+                        </li>
+                        
+                        <li>
+                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/sobre.html">Sobre</a>
+                        </li>
+
+                        <li>
+                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/contato.html">Contato</a>
+                        </li>
+
+                    </ul>
+                </div>
+    
+            </nav>  
+    
+        </div>
+
+        <div id="rest">
+
+            <div id="corpo">
+
+                <h1>Seja bem vindo a UFPel,</h1>
+                <h2>Esta é a Plataforma universal da universidade</h2>
+
+                <p>
+                   Plataforma desenvolvida por alunos da universidade, o objetivo era unificar as antigas
+                   plataformas em uma única e grande plataforma, dessa forma o sistema é mais intuítivo aos
+                   usuários da plataforma. Alunos, professores e servidores,todos ficam mais próximos, tornando
+                   o ambiente virtual da universidade um lugar de todos.
+                </p>
+    
+            </div>
+
+
+
+        </div>
+
+        
     </body>
+
+
 </html>
