Arrumei o caminho das chamadas no html

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -7,9 +7,9 @@
 
         <title>Main</title>
 
-        <link rel="shortcut icon" href="/home/nivek/Área de trabalho/University-Platform/src/view/img/titleIcon.ico">
+        <link rel="shortcut icon" href="img/titleIcon.ico">
 
-        <link rel="stylesheet" href="/home/nivek/Área de trabalho/University-Platform/src/view/css/index.css">
+        <link rel="stylesheet" href="css/index.css">
 
     </head>
 
@@ -20,30 +20,30 @@
             <nav id="navbar">
 
                 <div id="imageMenu">
-                    <img src="/home/nivek/Área de trabalho/University-Platform/src/view/img/logo1.svg" alt= "error" width=300 height=90/> 
+                    <img src="img/logo1.svg" alt= "error" width=300 height=90/> 
                 </div>
                 
                 <div id="list">
                     <ul>
     
                         <li>
-                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/index.html">Início</a>
+                            <a href="index.html">Início</a>
                         </li>
         
                         <li>
-                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/login.html">Entrar</a>
+                            <a href="login.html">Entrar</a>
                         </li>
         
                         <li>
-                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/cadastro.html">Cadastrar</a>
+                            <a href="cadastro.html">Cadastrar</a>
                         </li>
                         
                         <li>
-                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/sobre.html">Sobre</a>
+                            <a href="sobre.html">Sobre</a>
                         </li>
 
                         <li>
-                            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/contato.html">Contato</a>
+                            <a href="contato.html">Contato</a>
                         </li>
 
                     </ul>
