--- a/src/view/login.html
+++ b/src/view/login.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <title>Login</title>
-        <link rel="stylesheet" href="/home/nivek/Área de trabalho/University-Platform/src/view/css/login.css">
+        <link rel="stylesheet" href="css/login.css">
 
     </head>
 
@@ -15,17 +15,17 @@
 
         <form>
 
-            <img src="/home/nivek/Área de trabalho/University-Platform/src/view/img/logo2.png" alt= "error" width=300 height=90/> 
+            <img src="img/logo2.png" alt= "error" width=300 height=90/> 
             
             <input type="text" name="" placeholder="Siape/Num. Matricula/CPF">
             <input type="password" name="" placeholder="Senha"> 
             <input type="submit" name="" placeholder="Login">
 
-            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/cadastro.html">Criar Cadastro</a>
+            <a href="cadastro.html">Criar Cadastro</a>
 
             <br><br>
 
-            <a href="/home/nivek/Área de trabalho/University-Platform/src/view/alterarSenha.html">Alterar Senha</a>  
+            <a href="alterarSenha.html">Alterar Senha</a>  
 
         </form>
 
