--- a/src/view/css/index.css
+++ b/src/view/css/index.css
@@ -8,7 +8,7 @@ body{
 
   border: 1.5px solid black;
   height: 120px;
-  width: 1348px;
+  width: 100%;
   position: fixed;
   background: white;
   margin: 0px;
