--- a/src/view/alterarSenha.html
+++ b/src/view/alterarSenha.html
@@ -3,12 +3,26 @@
 
     <head>
 
+        <meta charset="utf-8">
+        <title>Alterar</title>
+        <link rel="stylesheet" href="css/alterarSenha.css">
 
     </head>
 
 
     <body>
         
+        <form>
+
+            <img src="img/logo2.png" alt= "error" width=300 height=90/> 
+
+            <input type="password" name="senhaNova" placeholder="Nova Senha">
+            <input type="password" name="confirmaSenha" placeholder="confirmar nova senha">
+            <input type="submit"   name="" placeholder="Login">
+
+        </form>
+
+
     </body>
 
 
