--- a/src/view/css/alterarSenha.css
+++ b/src/view/css/alterarSenha.css
@@ -1,16 +1,11 @@
-/*=======================   Estilo do body do login =====================================*/
-
-/* fazendo o estilo do body */
 body{
 
     margin: 0;  /* espaço fora de uma caixa */
     padding: 0; /* espaço dentro de uma caixa */
     font-family: sans-serif; 
     background: #e0ded9;
-
+    
 }
-
-/*==================================================================================== */
 
 img{
 
@@ -19,19 +14,10 @@ img{
 
 }
 
-/*====================================================================================
-
-
-
-
-
-/*=======================   Estilo do form que da o molde a box principal ========================*/
-
-/* fazendo o estilo do form, aqui é onde iremos estilizar a box
-   do login. */
 form{
 
     width: 300px;
+    height: 300px;
     padding: 40px;
     position: absolute;
     border: 1.5px solid black;
@@ -45,16 +31,7 @@ form{
 
 }
 
-/*=================================================================================================
-
-
-
-
-
-/*=======================   Estilo dos inputs de senha e matricula ========================*/
-
-/* fazendo o estilo dos inputs */
-input[type="text"], input[type="password"]{
+input[name="senhaNova"],input[name="confirmaSenha"]{
 
     background: none;
     display: block; /* centralizando input na box */
@@ -71,24 +48,13 @@ input[type="text"], input[type="password"]{
 
 }
 
-/* quando formos escrever em alguma das inputs a caixa
-   ficará com as bordas de outra cor */
-input[type="text"]:focus, input[type="password"]:focus{
+input[name="senhaNova"]:focus, input[name="confirmaSenha"]:focus{
 
     width: 200px;
     border-color: #27ae60; /* cor que será usada quando as inputs forem clicadas */
 
 }
 
-/*=================================================================================
-
-
-
-
-
-/*=======================   Botão para enviar os dados ==========================*/
-
-/* fazendo o estilo do submit */
 input[type="submit"]{
 
     border: 0;
@@ -107,36 +73,9 @@ input[type="submit"]{
 
 }
 
-/* personalizando o submit, quando passar o mouse por cima
-   o espaço do botão irá trocar de cor */
 input[type="submit"]:hover{
 
     border: #27ae60;
     background: #27ae60;
 
 }
-
-/*=================================================================================
-
-
-
-
-
-/*=======================   Estilo dos links do login  ============================*/
-
-/* fazendo o estilo dos links para as outras páginas */
-a{
-
-    color: #27ae60;
-    text-decoration: none; /* tirando o underline do link inicial */
-    
-}
-
-/* quando passa o mouse por cima do link, muda a cor do link */
-a:hover{
-
-    text-decoration: underline; /* quando passar o mouse por cima, o link fica com underline */
-
-}
-
-/*=================================================================================
