--- a/src/view/login.html
+++ b/src/view/login.html
@@ -15,7 +15,7 @@
         
         <div id="login">
 
-            <form method="POST" action="">
+            <form method="post" action="/">
 
                 <img src="img/logo2.png" alt= "error" width=300 height=90/> 
                 
